--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,10 +2,8 @@
   <header class="d-flex justify-content-center py-3">
     <ul class="nav nav-pills">
       <li class="nav-item"><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-link" aria-current="page">Home</a></li>
-      <li class="nav-item"><a routerLink="/prodotti" routerLinkActive="active" class="nav-link">Prodotti</a></li>
-      <li class="nav-item"><a routerLink="/checkout" routerLinkActive="active" class="nav-link">Checkout</a></li>
-      <li class="nav-item"><a routerLink="/checkout2" routerLinkActive="active" class="nav-link">Checkout 2</a></li>
-      <li class="nav-item"><a routerLink="/admin" routerLinkActive="active" class="nav-link">Admin</a></li>
+      <li class="nav-item"><a routerLink="/chisiamo" routerLinkActive="active" class="nav-link">Chi Siamo</a></li>
+      <li class="nav-item"><a routerLink="/checkout" routerLinkActive="active" class="nav-link">Carrello</a></li>
       <li class="nav-item"><a routerLink="/log-in" routerLinkActive="active" class="nav-link">Log-in</a></li>
     </ul>
   </header>
@@ -14,4 +12,3 @@
 <div>
   <router-outlet></router-outlet>
 </div>
-
