fix: added homepage

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,1 +1,47 @@
-<p>Home works!</p>
+<div class="px-4 pt-5 my-1 text-center border-bottom">
+  <h1 class="display-4 fw-bold">Integrazione sportiva di alta qualità </h1>
+  <div class="col-lg-6 mx-auto">
+    <p class="lead mb-4">SupplyDreams è un store che unisce prodotti delle più grandi multinazionali di
+      integrazione sportiva(Prozis, MyProtein, BulkPowders) a prezzi stracciati. scopri i nostri
+      prodotti e acquistali in grandi quantità per ottenere codici sconto che ti aiuteranno a raggiungere
+      i tuoi obbiettivi risparmiando!</p>
+    <div class="d-grid gap-2 d-sm-flex justify-content-sm-center mb-5">
+      <button type="button" class="btn btn-outline-secondary btn-lg px-4 me-sm-3" (click)="onVaiAProdotti()">Scopri i Prodotti</button>
+    </div>
+  </div>
+  <div class="album py-5 bg-light">
+    <div class="container">
+      <div class="container">
+        <h3 ><strong> I nostri Partner</strong> </h3>
+        <br>
+      </div>
+      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+        <div class="col">
+          <div class="card shadow-sm">
+              <img src="https://www.esnbologna.org/sites/default/files/partners/images/prozis.png" alt="" width="" height="150">
+            <div class="card-body bg-secondary">
+              <p class="card-text text-white"><strong>PROZIS</strong> </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="https://logos-download.com/wp-content/uploads/2016/12/Myprotein_logo_logotype.png" alt="" width="" height="150">
+            <div class="card-body bg-secondary">
+              <p class="card-text text-white"><strong>MYPROTEIN</strong> </p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card shadow-sm">
+            <img src="https://i.pinimg.com/originals/24/34/8a/24348a849654e903b696d2778df4e73f.png" alt="" width="" height="150">
+            <div class="card-body bg-secondary">
+              <p class="card-text text-white"> <strong>BULKPOWDERS</strong> </p>
+            </div>
+          </div>
+        </div>
+          </div>
+        </div>
+      </div>
+    </div>
+
