--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,22 +1,8 @@
-<!-- <div class="container">
-  <header class="d-flex justify-content-center py-3">
-    <ul class="nav nav-pills">
-      <li class="nav-item"><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-link" aria-current="page">Home</a></li>
-      <li class="nav-item"><a routerLink="/chisiamo" routerLinkActive="active" class="nav-link">Chi Siamo</a></li>
-      <li class="nav-item"><a routerLink="/checkout" routerLinkActive="active" class="nav-link">Carrello</a></li>
-      <li class="nav-item"><a routerLink="/log-in" routerLinkActive="active" class="nav-link">Log-in</a></li>
-    </ul>
-  </header>
-</div>
-
 <div>
-  <router-outlet></router-outlet>
-</div> -->
-<div class="container">
 <header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom ">
   <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
     <img src="https://cdn-icons-png.flaticon.com/512/833/833102.png" alt="" width="35" height="35">
-    <span class="fs-4 h2">SupplyDream</span>
+    <span class="fs-4 h2">SupplyDreams</span>
   </a>
   <ul class="nav nav-pills">
     <li class="nav-item"><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-link" aria-current="page">Home</a></li>
