fix: adding pagenotfound & prodotto.dt & mod home

--- a/src/app/prodotti/prodotti.component.html
+++ b/src/app/prodotti/prodotti.component.html
@@ -1,1 +1,4 @@
-<p>prodotti works!</p>
+<div class=" container input-group flex-nowrap">
+  <span class="input-group-text" id="addon-wrapping"><img src="https://cdn-icons-png.flaticon.com/512/54/54481.png" alt="" width="15" height="15"></span>
+  <input type="text" class="form-control" placeholder="Cerca Prodotto" aria-label="Username" aria-describedby="addon-wrapping">
+</div>
