--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div>
-<header class="d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom ">
+<header class="container d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom ">
   <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
     <img src="https://cdn-icons-png.flaticon.com/512/833/833102.png" alt="" width="35" height="35">
     <span class="fs-4 h2">SupplyDreams</span>
