--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,14 +1,15 @@
+
 <div>
-<header class="container d-flex flex-wrap justify-content-center py-3 mb-4 border-bottom ">
+<header class="container d-flex flex-wrap justify-content-center py-3 mb-4 ">
   <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
     <img src="https://cdn-icons-png.flaticon.com/512/833/833102.png" alt="" width="35" height="35">
     <span class="fs-4 h2">SupplyDreams</span>
   </a>
-  <ul class="nav nav-pills">
-    <li class="nav-item"><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-link" aria-current="page">Home</a></li>
-    <li class="nav-item"><a routerLink="/prodotti" routerLinkActive="active" class="nav-link">Prodotti</a></li>
-    <li class="nav-item"><a routerLink="/carrello" routerLinkActive="active" class="nav-link">Carrello</a></li>
-    <li class="nav-item"><a routerLink="/log-in" routerLinkActive="active" class="nav-link">Log-in</a></li>
+  <ul class="nav nav-pills text-white">
+    <li class="nav-item"><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-link" aria-current="page"><span class="text-black">Home</span></a></li>
+    <li class="nav-item"><a routerLink="/prodotti" routerLinkActive="active" class="nav-link"><span class="text-black">Prodotti</span></a></li>
+    <li class="nav-item"><a routerLink="/carrello" routerLinkActive="active" class="nav-link"><span class="text-black">Carrello</span></a></li>
+    <li class="nav-item"><a routerLink="/log-in" routerLinkActive="active" class="nav-link"><span class="text-black">Log-in</span></a></li>
   </ul>
 </header>
 </div>
