--- a/src/app/carrello/carrello.component.html
+++ b/src/app/carrello/carrello.component.html
@@ -1,1 +1,17 @@
-<p>carrello works!</p>
+<div class="container text-center col-md-5 col-lg-4 order-md-last">
+  <h4 style="margin:auto" class=" align-items-center mb-3">Carrello</h4>
+  <ul class="list-group mb-3"  *ngFor="let prod of prodotti ">
+    <li *ngIf="prod.selezionato" class="list-group-item d-flex justify-content-between lh-sm">
+      <img [routerLink]="['/prodotti', prod.slug]" src="{{prod.foto}}" alt="" width="50" height="50">
+       <div>
+      <h6 class="my-0 text-black">{{prod.nome}}</h6>
+        <small class="text-muted">{{prod.marca}}</small>
+      </div>
+      <span class="text-black">${{prod.prezzo}}</span>
+      <button (click)="rimuovi(prod)" class="btn btn-outline-secondary">x</button>
+    </li>
+  </ul>
+  <div class="text-center">
+    <button [routerLink]="['/carrello', 'checkout']" class=" btn btn-outline-secondary align-items-center">Completa Acquisto</button>
+    </div>
+</div>
