--- a/src/app/prodotto/prodotto.component.html
+++ b/src/app/prodotto/prodotto.component.html
@@ -1,6 +1,3 @@
-<div style="margin:5px">
-<img [routerLink]="['/prodotti']" src="https://cdn-icons-png.flaticon.com/512/507/507257.png" alt="" width="20" height="20">
-</div>
 <div style="margin:auto" class="text-center container row p-4 pb-0 pe-lg-0 pt-lg-5 align-items-center rounded-3 border shadow-lg">
   <div class="col-lg-7 p-3 p-lg-5 pt-lg-3">
     <h1 class="display-6 fw-bold lh-1">{{prodotto?.nome}} <h3 class="display-10">{{prodotto?.marca}}</h3></h1>
@@ -9,7 +6,7 @@
       <div class="btn-group">
         <h3 class="card-text"> <strong>€{{prodotto?.prezzo}}</strong></h3>
       </div>
-      <button [routerLink]="['/carrello']" style="border: 1px solid black" class="btn btn-outline-secondary">Acquista ora</button>
+      <button [routerLink]="['/prodotti']" style="border: 1px solid black" class="btn btn-outline-secondary">Torna ai Prodotti</button>
     </div>
   </div>
   <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden ">
