fix: added checkout page

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .nav-pills > li > a.active {
-  background-color: #6c757d !important;
+  background-color: #9da3a8 !important;
   color: #ffffff !important;
 }
 
