--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -8,9 +8,7 @@
   <ul class="nav nav-pills text-white">
     <li class="nav-item"><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-link" aria-current="page"><span class="text-black">Home</span></a></li>
     <li class="nav-item"><a routerLink="/prodotti" routerLinkActive="active" class="nav-link"><span class="text-black">Prodotti</span></a></li>
-    <li class="nav-item"><a routerLink="/carrello" routerLinkActive="active" class="nav-link"><span class="text-black">Carrello</span></a></li>
-    <li class="nav-item"><a routerLink="/log-in" routerLinkActive="active" class="nav-link"><span class="text-black">Log-in</span></a></li>
-  </ul>
+    <li class="nav-item"><a routerLink="/carrello" routerLinkActive="active" class="nav-link"><span class="text-black">Carrello</span></a></li>  </ul>
 </header>
 </div>
 <div>
