--- a/src/app/carrello/carrello.component.html
+++ b/src/app/carrello/carrello.component.html
@@ -1,3 +1,4 @@
+
 <div class="container text-center col-md-5 col-lg-4 order-md-last">
   <h4 style="margin:auto" class=" align-items-center mb-3">Carrello</h4>
   <ul class="list-group mb-3"  *ngFor="let prod of prodotti ">
@@ -14,8 +15,7 @@
   <div class="text-center">
     <button [routerLink]="['/carrello', 'checkout']" class=" btn btn-outline-secondary align-items-center">Completa Acquisto</button>
     <br>
-    <h4 style="padding: 20px;">€{{totale | number : '1.2-2'}}</h4>
+    <h5 style="padding: 20px;">Totale €{{totale | number : '1.2-2'}}</h5>
   </div>
 </div>
-
 
