fix: progetto consegnato | added checkout info e regards component

--- a/src/app/checkout/checkout.component.html
+++ b/src/app/checkout/checkout.component.html
@@ -144,10 +144,12 @@ novalidate=""
     Perfavore inserisci un cap corretto
   </div>
   </div>
-
+  <div>
+    <p>Il pagamento avverrà alla consegna!</p>
+  </div>
 </div>
 <br>
 <div class="text-center">
-<button type="submit" [disabled]="!f.valid" class=" btn btn-outline-secondary align-items-center">Conferma Ordine</button>
+<button [routerLink]="['/regards']" type="submit" [disabled]="!f.valid" class=" btn btn-outline-secondary align-items-center">Conferma Ordine</button>
 </div>
 </form>
