--- a/src/app/prodotto/prodotto.component.html
+++ b/src/app/prodotto/prodotto.component.html
@@ -6,7 +6,10 @@
       <div class="btn-group">
         <h3 class="card-text"> <strong>€{{prodotto?.prezzo}}</strong></h3>
       </div>
-      <button [routerLink]="['/prodotti']" style="border: 1px solid black" class="btn btn-outline-secondary">Torna ai Prodotti</button>
+      <!-- <button [routerLink]="['/prodotti']" style="border: 1px solid black" class="btn btn-secondary">Torna ai Prodotti</button> -->
+      <button *ngIf="prodotto?.aggiunto==false"  [routerLink]="['/carrello']" style="border: 1px solid black" class="btn btn-outline-secondary" (click)="AggiungiACarrello()">Acquista Ora</button>
+      <button *ngIf="prodotto?.aggiunto==true"  [routerLink]="['/carrello']" style="border: 1px solid black" class="btn btn-secondary">Prodotto già nel carrello</button>
+
     </div>
   </div>
   <div class="col-lg-4 offset-lg-1 p-0 overflow-hidden ">
