--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,9 @@
 
 <div>
-<header class="container d-flex flex-wrap justify-content-center py-3 mb-4 ">
+<header class="container d-flex flex-wrap justify-content-center py-3 mb-4">
   <a href="/" class="d-flex align-items-center mb-3 mb-md-0 me-md-auto text-dark text-decoration-none">
-    <img src="https://cdn-icons-png.flaticon.com/512/833/833102.png" alt="" width="35" height="35">
+    <img src=".//src/assets/images/protein-powder.png" alt="" width="35" height="35">
+    <!-- https://cdn-icons-png.flaticon.com/512/833/833102.png -->
     <span class="fs-4 h2">SupplyDreams</span>
   </a>
   <ul class="nav nav-pills text-white">
