fix: change navbar bg

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -1,5 +1,5 @@
 .nav-pills > li > a.active {
-  background-color: #9da3a8 !important;
+  background-color: #e1e2e3 !important;
   color: #ffffff !important;
 }
 
