--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -7,6 +7,8 @@
     <ul class="nav nav-pills text-white">
       <li class="nav-item"><a routerLink="/" routerLinkActive="active" [routerLinkActiveOptions]="{exact:true}" class="nav-link" aria-current="page"><span class="text-black">Home</span></a></li>
       <li class="nav-item"><a routerLink="/prodotti" routerLinkActive="active" class="nav-link"><span class="text-black">Prodotti</span></a></li>
-      <li class="nav-item"><a routerLink="/carrello" routerLinkActive="active" class="nav-link"><span class="text-black"><img src="https://cdn-icons-png.flaticon.com/512/1170/1170576.png" width="25" height="25">{{carrello.length}}</span></a></li>  </ul>
-  </header>
+      <li class="nav-item"><a routerLink="/carrello" routerLinkActive="active" class="nav-link"><span class="text-black"><img src="https://cdn-icons-png.flaticon.com/512/1170/1170576.png" width="25" height="25">{{carrello.length}}</span></a></li>
+      <li class="nav-item"><a routerLink="/log-in" routerLinkActive="active" class="nav-link"><span class="text-black"><img src="../../assets/images/user (1).png" width="20" height="20"></span></a></li>  </ul>
+
+    </header>
 
