fix: added quantiy of product in shopcart in header & modify home design

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -15,7 +15,7 @@
         <h3 ><strong> I nostri Partner</strong> </h3>
         <br>
       </div>
-      <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
+      <!-- <div class="row row-cols-1 row-cols-sm-2 row-cols-md-3 g-3">
         <div class="col">
           <div class="card shadow-sm">
               <img src="https://www.esnbologna.org/sites/default/files/partners/images/prozis.png" alt="" width="" height="150">
@@ -40,6 +40,39 @@
             </div>
           </div>
         </div>
+          </div> -->
+          <div class="px-4 pt-5 my-0 text-center border-bottom">
+            <h1 class="display-7 fw-bold">Prozis</h1>
+            <div class="col-lg-6 mx-auto">
+              <p class="lead mb-4">Multinazionale Portoghese con sede a Lisbona. Offre prodotti di altissima qualità a basso prezzo</p>
+            </div>
+            <div class="overflow-hidden" style="max-height: 25vh;">
+              <div class="container px-5">
+                <img src="https://www.esnbologna.org/sites/default/files/partners/images/prozis.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+              </div>
+            </div>
+          </div>
+          <div class="px-4 pt-5 my-0 text-center border-bottom">
+            <h1 class="display-7 fw-bold ">MyProtein</h1>
+            <div class="col-lg-6 mx-auto">
+              <p class="lead mb-4">Multinazionale Inglese con sede a Londra. Offre prodotti di altissima qualità a un giusto prezzo provvedendo anche a fornire tutte le indicazioni necessarie sulla provenienza dei loro prodotti</p>
+            </div>
+            <div class="overflow-hidden" style="max-height: 25vh;">
+              <div class="container px-5">
+                <img src="https://logos-download.com/wp-content/uploads/2016/12/Myprotein_logo_logotype.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+              </div>
+            </div>
+          </div>
+          <div class="px-4 pt-5 my-0 text-center border-bottom">
+            <h1 class="display-7 fw-bold ">BulkPowders</h1>
+            <div class="col-lg-6 mx-auto">
+              <p class="lead mb-4">Multinazionale Italina con sede a Roma. Offre prodotti di altissima qualità a un giusto prezzo. Si è fatta strada conquistandosi un nome importante grazie alla collaborazione con i più grandi influnecer al mondo</p>
+            </div>
+            <div class="overflow-hidden" style="max-height: 25vh;">
+              <div class="container px-5">
+                <img src="https://i.pinimg.com/originals/24/34/8a/24348a849654e903b696d2778df4e73f.png" class="img-fluid border rounded-3 shadow-lg mb-4" alt="Example image" width="700" height="500" loading="lazy">
+              </div>
+            </div>
           </div>
         </div>
       </div>
