--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -81,7 +81,7 @@
       <div class="modal-body p-5 pt-0">
         <form class="">
           <div class="form-floating mb-3">
-            <p>Benvenuto in SupplyDreams</p>
+            <p>Benvenuto in SupplyDreams, </p>
           </div>
           <button (click)="onLogout()" class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Log-out</button>
         </form>
