--- a/src/app/prodotti/prodotti.component.html
+++ b/src/app/prodotti/prodotti.component.html
@@ -1,11 +1,9 @@
 <div class=" container input-group flex-nowrap">
   <span class="input-group-text" id="addon-wrapping"><img src="https://cdn-icons-png.flaticon.com/512/54/54481.png" alt="" width="15" height="15"></span>
-  <input type="text" class="form-control" placeholder="Cerca x categoria (proteine, creatina, barrette)" aria-label="Username" aria-describedby="addon-wrapping"
+  <input type="text" class="form-control" placeholder="Cerca Prodotti" aria-label="Username" aria-describedby="addon-wrapping"
   [(ngModel)]="ricerca">
 
 </div>
-<br>
-<h5 class="container">{{ricerca | lowercase}} </h5>
 <br><br>
 
 <div class="card-group justify-content-center bg-light phone">
