--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -61,7 +61,7 @@
             </div>
           </div>
           </div>
-          <button [disabled]="!f.valid" (click)="onLogin()" class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Log-In</button>
+          <button [disabled]="!f.valid" (click)="onLogin()" class="w-100 mb-2 btn btn-lg rounded-3 btn-secondary" type="submit">Log-In</button>
           <div>
             <button class="btn">Non hai un account? registrati! </button>
           </div>
@@ -83,7 +83,7 @@
           <div class="form-floating mb-3">
             <p>Benvenuto in SupplyDreams, </p>
           </div>
-          <button (click)="onLogout()" class="w-100 mb-2 btn btn-lg rounded-3 btn-primary" type="submit">Log-out</button>
+          <button (click)="onLogout()" class="w-100 mb-2 btn btn-lg rounded-3 btn-secondary" type="submit">Log-out</button>
         </form>
       </div>
     </div>
