--- a/src/app/carrello/carrello.component.html
+++ b/src/app/carrello/carrello.component.html
@@ -3,10 +3,10 @@
   <h4 style="margin:auto" class=" align-items-center mb-3">Carrello
  <span class="badge bg-secondary rounded-pill">{{carrello.length}}</span></h4>
   <ul class="list-group mb-3"  *ngFor="let prod of carrello ">
-    <li class="list-group-item d-flex justify-content-between lh-sm">
+    <li *ngIf="prod.quantita" class="list-group-item d-flex justify-content-between lh-sm">
       <img [routerLink]="['/prodotti', prod.slug]" src="{{prod.foto}}" alt="" width="50" height="50">
        <div>
-      <h6 class="my-0 text-black">{{prod.nome}}</h6>
+      <h6 class="my-0 text-black">x{{prod.quantita}} {{prod.nome}}</h6>
         <small class="text-muted">{{prod.marca}}</small>
       </div>
       <span class="text-black">€{{prod.prezzo}}</span>
