--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -61,7 +61,7 @@
             </div>
           </div>
           </div>
-          <button [disabled]="!f.valid" (click)="onLogin()" class="w-100 mb-2 btn btn-lg rounded-3 btn-secondary" type="submit">Log-In</button>
+          <button [routerLink]="['/account']" [disabled]="!f.valid" (click)="onLogin()" class="w-100 mb-2 btn btn-lg rounded-3 btn-secondary" type="submit">Log-In</button>
           <div>
             <button class="btn">Non hai un account? registrati! </button>
           </div>
@@ -70,13 +70,11 @@
     </div>
   </div>
 </div>
-<div *ngIf="islog==true" class="modal modal-signin position-static d-block bg-white py-2" tabindex="-1" role="dialog" id="modalSignin">
+<!-- <div *ngIf="islog==true" class="modal modal-signin position-static d-block bg-white py-2" tabindex="-1" role="dialog" id="modalSignin">
   <div class="modal-dialog" role="document">
     <div class="modal-content rounded-4 shadow">
       <div class="modal-header p-5 pb-4 border-bottom-0">
-        <!-- <h1 class="modal-title fs-5" >Modal title</h1> -->
         <h1 class="fw-bold mb-0 fs-2">Account</h1>
-        <!-- <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button> -->
       </div>
       <div class="modal-body p-5 pt-0">
         <form class="">
@@ -88,6 +86,6 @@
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 
