--- a/src/app/prodotto/prodotto.component.html
+++ b/src/app/prodotto/prodotto.component.html
@@ -8,7 +8,7 @@
       </div>
       <!-- <button [routerLink]="['/prodotti']" style="border: 1px solid black" class="btn btn-secondary">Torna ai Prodotti</button> -->
       <button *ngIf="prodotto?.aggiunto==false"  [routerLink]="['/carrello']" style="border: 1px solid black" class="btn btn-outline-secondary" (click)="AggiungiACarrello()">Acquista Ora</button>
-      <button *ngIf="prodotto?.aggiunto==true"  [routerLink]="['/carrello']" style="border: 1px solid black" class="btn btn-secondary">Prodotto aggiunto</button>
+      <button *ngIf="prodotto?.aggiunto==true"  [routerLink]="['/carrello']" style="border: 1px solid black" class="btn btn-secondary">Prodotto nel carrello</button>
 
     </div>
   </div>
