--- a/src/app/account/account.component.html
+++ b/src/app/account/account.component.html
@@ -2,12 +2,12 @@
   <div class="modal-dialog" role="document">
     <div class="modal-content rounded-4 shadow">
       <div class="modal-header p-5 pb-4 border-bottom-0">
-        <h1 class="fw-bold mb-0 fs-2">Account</h1>
+        <h1 class="fw-bold mb-0 fs-2 text-center " style="margin: auto">Account</h1>
       </div>
       <div class="modal-body p-5 pt-0">
         <form class="">
           <div class="form-floating mb-3">
-            <p>Benvenuto in SupplyDreams, {{utenteattivo.email}}</p>
+            <p>Benvenuto in SupplyDreams,<span class="fw-bold "> {{nomeutente | uppercase}}</span> </p>
           </div>
           <button (click)="onLogout()" class="w-100 mb-2 btn btn-lg rounded-3 btn-secondary" type="submit">Log-out</button>
         </form>
