--- a/src/app/log-in/log-in.component.html
+++ b/src/app/log-in/log-in.component.html
@@ -3,7 +3,7 @@
     <div class="modal-content rounded-4 shadow">
       <div class="modal-header p-5 pb-4 border-bottom-0">
         <!-- <h1 class="modal-title fs-5" >Modal title</h1> -->
-        <h1 class="fw-bold mb-0 fs-2">Log-In</h1>
+        <h1 class="fw-bold mb-0 fs-2" style="margin: auto">Log-In</h1>
       </div>
       <div class="modal-body p-5 pt-0">
         <form
@@ -63,7 +63,7 @@
           </div>
           <button [disabled]="!f.valid" (click)="onLogin(f)" class="w-100 mb-2 btn btn-lg rounded-3 btn-secondary" type="submit">Log-In</button>
           <div>
-            <button class="btn">Non hai un account? registrati! </button>
+            <button [routerLink]="['/signup']"  class="btn"><span class="text-decoration-underline" style="color: blue;">Non hai un account? registrati</span> </button>
           </div>
         </form>
       </div>
