--- a/src/app/carrello/carrello.component.html
+++ b/src/app/carrello/carrello.component.html
@@ -3,7 +3,7 @@
   <h4 style="margin:auto" class=" align-items-center mb-3">Carrello
  <span class="badge bg-secondary rounded-pill">{{carrello.length}}</span></h4>
   <ul class="list-group mb-3"  *ngFor="let prod of carrello ">
-    <li *ngIf="prod.quantita" class="list-group-item d-flex justify-content-between lh-sm">
+    <li style="animation: fadeIn; animation-duration: 1s; "*ngIf="prod.quantita" class="list-group-item d-flex justify-content-between lh-sm">
       <img [routerLink]="['/prodotti', prod.slug]" src="{{prod.foto}}" alt="" width="50" height="50">
        <div>
       <h6 class="my-0 text-black">x{{prod.quantita}} {{prod.nome}}</h6>
@@ -11,7 +11,6 @@
       </div>
       <span class="text-black">€{{prod.prezzo}}</span>
       <button (click)="rimuovi(prod)" type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-
     </li>
   </ul>
   <div class="text-center">
@@ -25,7 +24,7 @@
   <h4 style="margin:auto" class=" align-items-center mb-3">Carrello
  <span class="badge bg-secondary rounded-pill">{{carrello.length}}</span></h4>
  <div class="px-4 py-5 my-5 text-center">
-  <img class="d-block mx-auto mb-4" src="https://cdn-icons-png.flaticon.com/512/2038/2038854.png" alt="" width="50" height="50">
+  <img style="animation: tada; animation-duration: 2s;" class="d-block mx-auto mb-4" src="https://cdn-icons-png.flaticon.com/512/2038/2038854.png" alt="" width="50" height="50">
   <h5 class=" fw-bold">IL carrello è vuoto! </h5>
   <div class="col-lg-6 mx-auto">
     <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
